[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Un projet Python structuré avec des utilitaires et un CLI."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3" # Dépendance externe ajoutée pour l'exercice

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"